// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Child node (icon component) -- dark tone class 1`] = `
"<a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=
        \\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
          <path d=
          \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`Child node (icon component) 1`] = `
"<a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=
        \\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
          <path d=
          \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`Dark tone class + light tone 1`] = `
"<div style=\\"background: rgb(255, 255, 255); padding: 8px 4px;\\"
class=\\"pe-button-row\\">
  <a class=\\"pe-button pe-icon-button pe-light-tone\\" tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-icon-button__content\\">
      <div class=\\"pe-icon pe-icon--regular\\">
        <div class=\\"pe-svg\\">
          <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
          focusable=\\"false\\">
            <path d=
            \\"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div></a><a class=
  \\"pe-button pe-icon-button pe-light-tone tests-icon-button-themed-icon-button\\"
  tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-icon-button__content\\">
      <div class=\\"pe-icon pe-icon--regular\\">
        <div class=\\"pe-svg\\">
          <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
          focusable=\\"false\\">
            <path d=
            \\"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`Dark tone class + light tone class 1`] = `
"<div style=\\"background: rgb(255, 255, 255); padding: 8px 4px;\\"
class=\\"pe-button-row pe-light-tone\\">
  <a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-icon-button__content\\">
      <div class=\\"pe-icon pe-icon--regular\\">
        <div class=\\"pe-svg\\">
          <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
          focusable=\\"false\\">
            <path d=
            \\"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div></a><a class=
  \\"pe-button pe-icon-button tests-icon-button-themed-icon-button\\"
  tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-icon-button__content\\">
      <div class=\\"pe-icon pe-icon--regular\\">
        <div class=\\"pe-svg\\">
          <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\"
          focusable=\\"false\\">
            <path d=
            \\"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`No options 1`] = `
"<a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\"></div>
</div></a>
"
`;

exports[`Option: class 1`] = `
"<a class=\\"pe-button pe-icon-button class-x\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\"></div>
</div></a>
"
`;

exports[`Option: className 1`] = `
"<a class=\\"pe-button pe-icon-button className-x\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\"></div>
</div></a>
"
`;

exports[`Option: compact 1`] = `
"<a class=\\"pe-button pe-icon-button pe-icon-button--compact\\"
tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=
        \\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
          <path d=
          \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`Option: disabled 1`] = `
"<a class=\\"pe-button pe-icon-button pe-button--disabled\\" tabindex=
\\"-1\\" disabled>
<div class=\\"pe-button__content\\">
  <div class=\\"pe-icon-button__content\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=
        \\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
          <path d=
          \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
<div class=\\"pe-icon-button__label\\">
  Label
</div></a>
"
`;

exports[`Option: element 1`] = `
"<a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\"></div>
</div></a>
"
`;

exports[`Option: events.onclick 1`] = `
"<a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=
        \\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
          <path d=
          \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
<div class=\\"pe-icon-button__label\\">
  Label
</div></a>
"
`;

exports[`Option: icon 1`] = `
"<a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=
        \\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
          <path d=
          \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`Option: icon, label 1`] = `
"<a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=
        \\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
          <path d=
          \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
<div class=\\"pe-icon-button__label\\">
  Label
</div></a>
"
`;

exports[`Option: id 1`] = `
"<a id=\\"id-x\\" class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\"></div>
</div></a>
"
`;

exports[`Option: label (RTL) 1`] = `
"<div class=\\"pe-rtl\\">
  <a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-icon-button__content\\">
      <div class=\\"pe-icon pe-icon--regular\\">
        <div class=\\"pe-svg\\">
          <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\"
          height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
            <path d=
            \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"pe-icon-button__label\\">
    ضع الكلمة المناسبة
  </div></a>
</div>
"
`;

exports[`Option: ripple (center) 1`] = `
"<a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=
        \\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
          <path d=
          \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`Option: size 1`] = `
"<div class=\\"multiple\\">
  <a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-icon-button__content\\">
      <div class=\\"pe-icon pe-icon--small\\">
        <div class=\\"pe-svg\\">
          <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\"
          height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
            <path d=
            \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"pe-icon-button__label\\">
    small
  </div></a><a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-icon-button__content\\">
      <div class=\\"pe-icon pe-icon--regular\\">
        <div class=\\"pe-svg\\">
          <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\"
          height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
            <path d=
            \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"pe-icon-button__label\\">
    regular
  </div></a><a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-icon-button__content\\">
      <div class=\\"pe-icon pe-icon--medium\\">
        <div class=\\"pe-svg\\">
          <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\"
          height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
            <path d=
            \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"pe-icon-button__label\\">
    medium
  </div></a><a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-icon-button__content\\">
      <div class=\\"pe-icon pe-icon--large\\">
        <div class=\\"pe-svg\\">
          <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\"
          height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
            <path d=
            \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"pe-icon-button__label\\">
    large
  </div></a>
</div>
"
`;

exports[`Option: style (colors) 1`] = `
"<a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
<div style=
\\"color: rgb(255, 204, 188); background-color: rgb(78, 52, 46);\\"
class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=
        \\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
          <path d=
          \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`Option: tabindex 1`] = `
"<a tabindex=\\"3\\" class=\\"pe-button pe-icon-button\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\"></div>
</div></a>
"
`;

exports[`Option: url 1`] = `
"<a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\" href=\\"#!/shadow\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg width=\\"24\\" height=\\"24\\" viewbox=\\"0 0 24 24\\" focusable=
        \\"false\\">
          <path d=
          \\"M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
<div class=\\"pe-icon-button__label\\">
  Go to Shadow
</div></a>
"
`;

exports[`Option: wash (true) -- dark tone class 1`] = `
"<a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=
        \\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
          <path d=
          \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`Option: wash (true) 1`] = `
"<a class=\\"pe-button pe-icon-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=
        \\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
          <path d=
          \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`Themed (color and size) -- dark tone class 1`] = `
"<a class=
\\"pe-button pe-icon-button tests-icon-button-themed-icon-button\\"
tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=
        \\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
          <path d=
          \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`Themed (colors and padding) 1`] = `
"<a class=
\\"pe-button pe-icon-button tests-icon-button-themed-icon-button\\"
tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=
        \\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
          <path d=
          \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`Themed (hover color) 1`] = `
"<a class=\\"pe-button pe-icon-button tests-icon-button-themed-hover\\"
tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-icon-button__content\\">
    <div class=\\"pe-icon pe-icon--regular\\">
      <div class=\\"pe-svg\\">
        <svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=
        \\"24\\" viewbox=\\"0 0 24 24\\" focusable=\\"false\\">
          <path d=
          \\"M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
<div class=\\"pe-icon-button__label\\">
  Hover
</div></a>
"
`;
